--- a/site-seed/app/index.html
+++ b/site-seed/app/index.html
@@ -45,6 +45,7 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/config.js"></script>
     <script src="scripts/app.js"></script>
     <!-- endbuild -->
 </body>
